// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cartridge should render correctly 1`] = `
<Styled(Text)
  backgroundColor="primary"
  color="white"
/>
`;

exports[`Cartridge should render correctly with nature 1`] = `
<Styled(Text)
  backgroundColor="secondary"
  color="white"
/>
`;
